--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@modelcontextprotocol/sdk": "^1.9.0",
     "@scarf/scarf": "^1.4.0",
     "axios": "1.12.0",
+    "axios-cookiejar-support": "^6.0.4",
+    "tough-cookie": "^5.1.2",
     "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
